[package]
name = "tokio-postgres-cursor"
version = "0.1.0"
authors = ["mee7ya"]
edition = "2024"
description = "PostgreSQL forward fetch cursor support for `tokio-postgres`"
readme = "README.md"
repository = "https://github.com/mee7ya/tokio-postgres-cursor"
license-file = "LICENSE"
keywords = ["async", "tokio", "postgresql"]
categories = ["database"]
exclude = [".github/", ".gitignore"]

[dependencies]
futures-core = "0.3.31"
rand = "0.9.2"
tokio-postgres = "0.7.15"

[dev-dependencies]
futures = "0.3.31"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
